solved little bugs